--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,11 @@ body,
 }
 ::-webkit-scrollbar-track{
     background-color: #e0e0e0;
+    border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb{
     background-color: #888;
+    border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover{
     background-color: #555;
@@ -29,4 +31,7 @@ body,
 }
 .ps-menu-button{
     color: cadetblue !important;
+}
+ul{
+    padding: 0;
 }
